Fri Jul 08 23:46:02 2016  Jiri (George) Lebl <jirka@5z.com>

	* src/funclib.c: fix StripZeroColumns when a zero matrix is passed
	  in.

	* help/C/genius.xml: fix Planetmath links (thanks to Anders Jonsson).
	  Also add a couple more wikipedia links and a couple of details in
	  various places.

	* src/calc.h: raise year to 2016

Thu Jun 09 16:56:00 2016  Jiri (George) Lebl <jirka@5z.com>

	* help/C/genius.xml, lib/combinatorics/factorial.gel:
	  Apply patch from Anders Jonsson to fix Subfactorial (definition
	  wrong).  Also, let Subfactorial, Factorial, DoubleFactorial
	  take a matrix and apply function on matrix.

	* lib/functions/elementary.gel: fix acos
	
	* src/geniustests.txt, src/longtest.gel: Add a few tests including
	  test for some inverse trig functions

	* src/eval.c, src/funclib.c, src/gnome-genius.c, src/mpwrap.c,
	  help/C/genius.xml, lib/equation_solving/newton.gel,
	  lib/misc/misc.gel, lib/combinatorics/recursive_sequences.gel:
	  Some string fixes also from Anders Jonsson

Mon May 23 16:20:17 2016  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: fix segfault when rotate animation is running and a
	  new function is plotted

	* src/funclib.c: fix error string
	
	* lib/functions/elementary.gel: fixup some of the inverse trig
	  functions for complex arguments and fix some divisions by zero

	* po/eo.po: minor additions to translations

Wed Jan 20 09:37:38 2016  Jiri (George) Lebl <jirka@5z.com>

	* lib/number_theory/primes.gel: update data from GIMPS (new prime)

Wed Jan 06 13:49:05 2016  Jiri (George) Lebl <jirka@5z.com>

	* Release 1.0.21

	* configure.in: new version

	* NEWS: updates

	* po/eo.po: update translations

	* help/C/genius.xml: update version info

Tue Dec 15 17:08:36 2015  Jiri (George) Lebl <jirka@5z.com>

	* src/calc.c: in pretty print if results as floats is on, then do not
	  try to do pretty print of fractions obviously.

Mon May 04 17:34:29 2015  Jiri (George) Lebl <jirka@5z.com>
