@@ -1,3 +1,8 @@
+Fri Jul 08 23:52:05 2016  Jiri (George) Lebl <jirka@5z.com>
+
+	* help/C/genius.xml: Apply patch from Anders Jonsson to fix quite a
+	  few typos in the manual.
+
 Fri Jul 08 23:46:02 2016  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/funclib.c: fix StripZeroColumns when a zero matrix is passed
